# SDR

./: .antlr-eclipse  .classpath  .cvsignore  .gitignore  .project  AUTHORS  NEWS  README  README.md  build.xml  index.html  natural-v2.g  natural-v3.g  notes.txt  pythagoras.html  run-pmsd.sh  run-shell.sh  sample.build.properties  sdr.Manifest  sdr.jnlp  sdr.jnlp.in  upload.sh
doc/: calldefs.tex  tex-squares.sty
images/: star-grad.xcf.bz2
lib/dev/: README  pack200tasks.html
lib/dev/jacoco-0.6.4/: index.html
lib/dev/jacoco-0.6.4/coverage/: .sessions.html  coverage.csv  coverage.xml  index.html
lib/dev/jacoco-0.6.4/doc/: agent.html  ant.html  api.html  build.html  changes.html  check-mojo.html  conventions.html  counters.html  dump-mojo.html  empty.html  environment.html  epl-v10.html  faq.html  flow.html  help-mojo.html  implementation.html  index.html  instrument-mojo.html  integrations.html  license.html  maven.html  merge-mojo.html  mission.html  offline.html  prepare-agent-integration-mojo.html  (+7 more)
lib/jme/: update.sh
lib/jme/jnlp/: jinput-linux.jar.MD5  jinput-mac.jar.MD5  jinput-windows.jar.MD5  lwjgl-linux.jar.MD5  lwjgl-mac.jar.MD5  lwjgl-windows.jar.MD5  openal-linux.jar.MD5  openal-mac.jar.MD5  openal-windows.jar.MD5
lib/sphinx/: extradict  update.sh
src/: overview.html
src/EDU/Washington/grad/gjb/cassowary/demos/: DraggableBox.java  Makefile.am  QuadDemo.java
src/doc-files/: loadpretty.js
src/net/cscott/: JUtil.gwt.xml  SDR.gwt.xml  SDRbase.gwt.xml
war/: SDRweb.css  SDRweb.html  closeme.html
war/WEB-INF/: appengine-web.xml  web.xml
(+939 files in other folders)
